objects/Product_Configuration__c.object
<CustomObject><fields>
        <fullName>Actual_Product_Category_Cost__c</fullName>
        <label>Actual Product Category Cost</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields><fields>
        <fullName>Admin_Charge__c</fullName>
        <label>Admin Charge</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields><fields>
        <fullName>Annual_Qty__c</fullName>
        <label>Annual Qty</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Annual_Total__c</fullName>
        <formula>Price__c *  Annual_Qty__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Selling Price x Annual Qty</inlineHelpText>
        <label>Annual Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields><fields>
        <fullName>CT_Message__c</fullName>
        <formula>CASE(Credit_Terms__c, 
	'30D', 
	"Credit will be extended on strictly 30 days terms", 
	'30D_CA', 
	"Credit will be extended on strictly 30 day terms subject to formal credit application approval, (credit application attached).",
	'62D',
	"Credit will be extended to 62 days from end of month.",
	'COD_50',
	"It is normal company policy for all new customers to be placed on COD terms. However new Patterns if required are to be paid as follows: 50% on placement of order and balance COD with casting shipment.",
	'COD',
	"It is normal company policy for all new customers to be placed on COD terms. Credit may be extended for repeat customers (say after 12 months and/or a number of orders) on strictly 30 days    terms, subject to normal credit approval.",
	'50_UF',
	"50% of order value to be paid on placement of order, balance to be paid prior to despatch of goods.",
	'100_UF',
	"Payment is required on placement of order.",
	''
	)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CT Message</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Christmas_Delivery_Period__c</fullName>
        <formula>IF (
(DATE( Year(Opportunity__r.CloseDate), 12, 1) - Opportunity__r.CloseDate)/7&lt;=Total_Weeks__c 
||
Month(Opportunity__r.CloseDate)= 12
||
Month(Opportunity__r.CloseDate)= 1,
true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>If the Opportunity Close date is in January or December, or if the close date + total production time is less than the number of weeks to December, the Christmas Delivery clause will be added.</inlineHelpText>
        <label>Christmas Delivery</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Contact_Email__c</fullName>
        <formula>Customer_Contact__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Email</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Contact_Phone__c</fullName>
        <formula>Customer_Contact__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Phone</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Cost_Per_UOM__c</fullName>
        <label>Cost Per UOM</label>
        <picklist>
            <picklistValues>
                <fullName>Each</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Cost_Per__c</fullName>
        <label>Cost Per</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Cost__c</fullName>
        <label>Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields><fields>
        <fullName>Credit_Terms__c</fullName>
        <globalPicklist>Credit_Terms_Values</globalPicklist>
        <label>Credit Terms</label>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Customer_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Product_Configurations</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields><fields>
        <fullName>Drawing_Number__c</fullName>
        <label>Drawing Number</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Drawing_Rev__c</fullName>
        <label>Drawing Rev</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Factory_Price__c</fullName>
        <formula>Subtotal__c + Scrap_Cost__c + Admin_Charge__c/Order_Qty__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Subtotal + Scrap Cost + Admin Cost / Order Qty</inlineHelpText>
        <label>Factory Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields><fields>
        <fullName>Gross_Weight__c</fullName>
        <formula>Net_Wt__c * No_Per_Box__c / Yield__c</formula>
        <label>Gross Weight (KG)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Margin__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Margin</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields><fields>
        <fullName>Mark_as_Template__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mark as Template</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Net_Wt__c</fullName>
        <label>Net Weight (KG)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>No_Per_Box__c</fullName>
        <label>Number Per Box</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>Product_Configurations</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>Order_Qty__c</fullName>
        <label>Order Qty</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Order_Total__c</fullName>
        <formula>Price__c *  Order_Qty__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Selling Price x Order Qty</inlineHelpText>
        <label>Order Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields><fields>
        <fullName>Pat_Equip_Message__c</fullName>
        <formula>CASE(Pattern_Equipment__c, 
'New', 
"Our offer allows for the manufacture of pattern tooling suitable for use in our foundry. White Industries reserves the right to return customer tooling, at customer expense, if that tooling has not been used in the previous 3 (three) years.", 
'Client', 
"We reserve the right following receipt of your patterns to either accept same in the as supplied condition or tender our price to rework / repair / alter the pattern to render it suitable for our processes.", 
'Held',
"Pattern tooling is currently held at White Industries works Dalby. White Industries reserves the right to return customer tooling, at customer expense, if that tooling has not been used in the previous 3 (three) years.",
'' 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pat_Equip_Message</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Pattern_Equipment__c</fullName>
        <inlineHelpText>Selects the text in the Pattern Equipment section of the terms and conditions on the quote.</inlineHelpText>
        <label>Pattern Equipment</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Held</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Pattern_Weeks__c</fullName>
        <label>Pattern Weeks</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Position__c</fullName>
        <formula>Customer_Contact__r.Title</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Position</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Price_Per_UOM__c</fullName>
        <label>Price Per UOM</label>
        <picklist>
            <picklistValues>
                <fullName>Each</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Price_Per__c</fullName>
        <label>Price Per</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Price__c</fullName>
        <label>Selling Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields><fields>
        <fullName>Product_Category_Cost__c</fullName>
        <formula>Product_Category__r.Cost__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Category Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields><fields>
        <fullName>Product_Category__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Category</label>
        <referenceTo>Product_Category__c</referenceTo>
        <relationshipName>Product_Configurations</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>Production_Weeks__c</fullName>
        <label>Production Weeks</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Quote_Date__c</fullName>
        <defaultValue>today()</defaultValue>
        <label>Quote Date</label>
        <type>Date</type>
    </fields><fields>
        <fullName>Quote_Number__c</fullName>
        <displayFormat>Q{00000}</displayFormat>
        <label>Quote Number</label>
        <type>AutoNumber</type>
    </fields><fields>
        <fullName>Reject_Rate__c</fullName>
        <defaultValue>0.02</defaultValue>
        <label>Reject Rate</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields><fields>
        <fullName>Scope_Message__c</fullName>
        <formula>CASE(Scope_Of_Offer__c, 
'PTP', 
"Our offer is for the supply of patterns and the manufacture thereafter of trial and production castings.", 
'PTPM', 
"Our offer is for the supply of patterns and the manufacture thereafter of trial and production castings inclusive of CNC machining.", 
'CM', 
"Our offer is for the supply of castings, inclusive of CNC machining.", 
'M', 
"Our offer is for the supply of CNC machining.", 
'C', 
"Our offer is for the supply of castings only.", 
'Fab', 
"Our offer is for the supply of fabricated items only.", 
'' 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Scope_Message</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Scope_Of_Offer__c</fullName>
        <inlineHelpText>This option sets the message in the Scope of Offer section of the terms and conditions on the quote.</inlineHelpText>
        <label>Scope Of Offer</label>
        <picklist>
            <picklistValues>
                <fullName>PTP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PTPM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>M</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fab</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Scrap_Cost__c</fullName>
        <formula>Reject_Rate__c * Subtotal__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Scrap Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields><fields>
        <fullName>Synchro_Index__c</fullName>
        <externalId>true</externalId>
        <label>Synchro Index</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Total_Machine_Fixture_Cost__c</fullName>
        <label>Total Machine Fixture Cost</label>
        <summarizedField>Machine_Fixture__c.Total_Machine_Fixture_Cost__c</summarizedField>
        <summaryForeignKey>Machine_Fixture__c.Product_Configuration__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields><fields>
        <fullName>Total_Materials_Cost__c</fullName>
        <label>Total Materials Cost</label>
        <summarizedField>Product_Material__c.Total_Cost_Mirror__c</summarizedField>
        <summaryForeignKey>Product_Material__c.Product_Configuration__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields><fields>
        <fullName>Total_Pattern_Cost__c</fullName>
        <label>Total Pattern Cost</label>
        <summarizedField>Pattern__c.Total_Pattern_Cost__c</summarizedField>
        <summaryForeignKey>Pattern__c.Product_Configuration__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields><fields>
        <fullName>Total_Process_Cost__c</fullName>
        <label>Total Process Cost</label>
        <summarizedField>Product_Process__c.Total_Cost__c</summarizedField>
        <summaryForeignKey>Product_Process__c.Product_Configuration__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields><fields>
        <fullName>Total_Product_Category_Cost__c</fullName>
        <formula>Actual_Product_Category_Cost__c *  Net_Wt__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Product Category Cost</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields><fields>
        <fullName>Total_Service_Cost__c</fullName>
        <label>Total Service Cost</label>
        <summarizedField>Product_Service__c.Service_Price__c</summarizedField>
        <summaryForeignKey>Product_Service__c.Product_Configuration__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields><fields>
        <fullName>Total_Weeks__c</fullName>
        <formula>Pattern_Weeks__c + Trial_Weeks__c + Production_Weeks__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Weeks</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Transport_Option__c</fullName>
        <globalPicklist>Transport_Options</globalPicklist>
        <label>Transport</label>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Trial_Weeks__c</fullName>
        <label>Trial Weeks</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Yield__c</fullName>
        <label>Yield</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields><fields>
        <fullName>Subtotal__c</fullName>
        <formula>Total_Materials_Cost__c + Total_Process_Cost__c +  Total_Product_Category_Cost__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Subtotal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields><allowInChatterGroups>false</allowInChatterGroups><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><deploymentStatus>Deployed</deploymentStatus><enableActivities>false</enableActivities><enableBulkApi>true</enableBulkApi><enableFeeds>false</enableFeeds><enableHistory>false</enableHistory><enableReports>true</enableReports><enableSearch>true</enableSearch><enableSharing>true</enableSharing><enableStreamingApi>true</enableStreamingApi><label>WI Quote</label><nameField>
        <label>Quote Name</label>
        <type>Text</type>
    </nameField><pluralLabel>WI Quotes</pluralLabel><sharingModel>ReadWrite</sharingModel><listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews><validationRules>
        <fullName>Cannot_Change_Margin_and_Sell_Price</fullName>
        <active>true</active>
        <description>Cannot change both Margin and Selling Price in the same operation</description>
        <errorConditionFormula>AND(ISCHANGED( Margin__c ), ISCHANGED( Price__c ))</errorConditionFormula>
        <errorDisplayField>Price__c</errorDisplayField>
        <errorMessage>You cannot change both the Margin and Selling Price in one operation.  Change one or the other and the system will automatically calculate the other field value.</errorMessage>
    </validationRules></CustomObject>